# binary-vqa-example

./: .gitignore  README.md  pyproject.toml
data/raw/: VQA_train.csv
notebooks/: modeling.ipynb
