[tool.poetry]
name = "binary-vqa-example"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["Borodynya Maxim <borody.maxim@gmail.com>"]
readme = "README.md"
repository = "https://github.com/JaskierM/binary-vqa-example"
keywords = ["llm", "vqa", "visual", "question", "answering"]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"


[tool.poetry.group.research.dependencies]
numpy = "^1.26.0"
pandas = "^2.1.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
